Added some styling and static images

--- a/frontend/src/app/core/about/about.component.html
+++ b/frontend/src/app/core/about/about.component.html
@@ -22,34 +22,30 @@
         <h3>Here is a map with all our services in different cities!</h3>
 
         <div class="map-image">
-            <img [attr.src]="'https://lh3.googleusercontent.com/u/0/drive-viewer/AFDK6gMNqvbXoSN1mOyXMXAAtrbuQIaKQSn9syEWCq_oMeBdcNObPNcpXLSY1E6DOXoX7EfqeEcbRT5yJvW3QEWgmnY0m2SbKw=w1366-h615'"
-                alt="Map with our services around the country">
+            <img src="assets/static-images/map.png" alt="Map with our services around the country">
         </div>
 
-        <p>You have questions? Check our <a routerLink="/FAQ">Frequently Asked Questions</a> page or <span class="contact"><a href="mailto:fake_email@alabala.com"
-            title="fake_email@alabala.com">Email us your question</a></span>!</p>
+        <p>You have questions? Check our <a routerLink="/FAQ">Frequently Asked Questions</a> page or <span
+                class="contact"><a href="mailto:fake_email@alabala.com" title="fake_email@alabala.com">Email us your
+                    question</a></span>!</p>
         <h3>Our teams</h3>
 
         <div class="team-image">
-            <img [attr.src]="'https://lh3.googleusercontent.com/u/0/drive-viewer/AFDK6gN-cgIjgwgV77Af_E_sIMlxd0zVUUxlJ2iqjSblZNzN8jwr4XsNRwIZIxhO2uB57HgRdUV6j4RVDQZPxE1MQT4cq1l4=w1366-h615'"
-                alt="Team picture">
+            <img src="assets/static-images/team-working.jpg" alt="Team picture">
         </div>
 
         <div class="team-image">
-            <img [attr.src]="'https://lh3.googleusercontent.com/u/0/drive-viewer/AFDK6gOwfuogTQM6gjUG2tPhv74lzfNxEdjQnnROP10F8qGe-tALw2zlbmho3YX5sXFFEPLfcFoj2LEbrFXnE4gTS7WUDuz_TQ=w1366-h615'"
-                alt="Team picture 2">
+            <img src="assets/static-images/team-working-2.jpg" alt="Team picture 2">
         </div>
 
         <div class="team-image">
-            <img [attr.src]="'https://lh3.googleusercontent.com/u/0/drive-viewer/AFDK6gMPBzABdCd_3aHKpQxMMmg45pFfmuTsqoxhaSmuT8mlBbVCq6iJhj0G_I1xGoqf8xWlPYPAkHnHX34I2iURcccMlHzDYA=w1366-h615'"
-                alt="Team picture 3">
+            <img src="assets/static-images/team-working-3.jpg" alt="Team picture 3">
         </div>
 
         <p>One of our teams even got the opportunity to participate in an official race event!</p>
 
         <div class="team-image">
-            <img [attr.src]="'https://lh3.googleusercontent.com/u/0/drive-viewer/AFDK6gNCWik8DbiIxR0zg8RQJbddQXC7P1iNXdupGi5XxFeMg5y1bfuUCxbJ9-XBv9p-r5W3Uw-PBxKM2Vp--ij1p3nKL4pibQ=w1366-h615'"
-                alt="Team picture 4">
+            <img src="assets/static-images/team-working-4.jpg" alt="Team picture 4">
         </div>
 
     </div>
