--- a/frontend/src/app/core/not-found/not-found.component.html
+++ b/frontend/src/app/core/not-found/not-found.component.html
@@ -1,18 +1,14 @@
 <main>
 
-    <div>
-        <span>4</span>
-        <span><img
-                [attr.src]="'https://lh3.googleusercontent.com/u/0/drive-viewer/AFDK6gNJjOPWYjW29x9mF_GczggOzmvubxmfrdFcnyPwOML6H-KxelDTnqEe_kRcmBRMPH4zF767tCWykQOKM_ZaBSERBAkU=w1366-h615'" alt="0"></span>
-        <span>4</span>
+    <p class="top">4
+        <img src="assets/static-images/flat-tire.png" alt="0" class="flat">
+        4
+    </p>
 
-        <br>
-        <span>
-            <img
-                [attr.src]="'https://lh3.googleusercontent.com/u/0/drive-viewer/AFDK6gN20w3GQK4ET-2MWFl1bZgjCsZ7-VgGA23OMGQFpropKE46_sATg9zet0hJBtyqAGir2-Nvw9pyREdhx28YJHbVEE_v=w1366-h615'">
-        </span>
-        <p>The page that you try to access does not exist!</p>
-        <a routerLink="/">Go to Home page</a>
-    </div>
+    <p>
+        <img src="assets/static-images/car-crash.png" alt="Bad Crash" class="crash">
+    </p>
 
+    <p><strong>The page that you try to access does not exist!</strong></p>
+    <a class="button" routerLink="/"><h1>Go to Home page</h1></a>
 </main>
