--- a/frontend/src/app/core/footer/footer.component.html
+++ b/frontend/src/app/core/footer/footer.component.html
@@ -1,12 +1,19 @@
 <footer>
     <!-- TODO add images for better UX -->
-    <p>Contact us via <span class="contact"><a href="mailto:fake_email@alabala.com"
-                title="fake_email@alabala.com">Email</a></span></p>
-    <p>Call us: <span class="contact"><a href="tel:+1-111-222-3" title="Fake number">+1-111-222-3</a></span> or
-        <span class="contact"><a href="tel:+1-555-123-4" title="Another fake number">+1-555-123-4</a></span>.
-    </p>
-    <p><span class="contact"><a href="https://www.classtools.net/FB/home-page" target="_blank"
-                title="Fake facebook page">Facebook
-                Page</a></span></p>
+    <div class="left">
+        <p>Contact us via <span class="contact">
+                <a href="mailto:fake_email@alabala.com" title="fake_email@alabala.com">Email</a></span></p>
+        <p><span class="contact"><a href="https://www.classtools.net/FB/home-page" target="_blank"
+                    title="Fake facebook page">Facebook
+                    Page</a></span></p>
+    </div>
+    <div class="right">
+
+        <p>Call us: <span class="contact"><a href="tel:+1-111-222-3"
+                    title="Fake number">+1-111-222-3</a></span>
+        <p><span class="contact"><a href="tel:+1-555-123-4"
+                    title="Another fake number">+1-555-123-4</a></span></p>
+    </div>
     <p>©Copyright Project Defence 2022, All rights reserved</p>
+    <a href="https://github.com/Kif-gg/Angular-project-defence"><p><span class="contact">GITHUB REPO HERE</span></p></a>
 </footer>
