--- a/frontend/src/app/core/faq/faq.component.html
+++ b/frontend/src/app/core/faq/faq.component.html
@@ -22,7 +22,7 @@
         </div>
         <div class="answer">
             <p>Our teams of mechanics which are in every province are proved masters and have degrees of repairing
-                and taking care of vehicles! Check in <strong><a href="about.html">our about page</a></strong> to
+                and taking care of vehicles! Check in <strong><a routerLink="/about">our about page</a></strong> to
                 learn more about
                 the teams!</p>
         </div>
