--- a/frontend/src/app/authorization/register/register.component.html
+++ b/frontend/src/app/authorization/register/register.component.html
@@ -28,16 +28,15 @@
             </ng-container>
             <label>Password: </label>
             <input #passwordInput="ngModel" [type]="passtext" name="password" ngModel required>
-            <span (mouseenter)="showPass()" (mouseleave)="hidePass()">👁️</span>
+            <span (mouseenter)="showPass()" (mouseleave)="hidePass()">👁</span>
             <ng-container *ngIf="passwordInput.touched">
                 <p class="error" *ngIf="passwordInput.errors?.['required']">
                     Password is required!
                 </p>
             </ng-container>
-            <!-- TODO add event to show password -->
             <label>Confirm Password: </label>
             <input #repassInput="ngModel" [type]="repasstext" name="repass" ngModel required>
-            <span (mouseenter)="showRepass()" (mouseleave)="hideRepass()">👁️</span>
+            <span (mouseenter)="showRepass()" (mouseleave)="hideRepass()">👁</span>
             <ng-container *ngIf="repassInput.touched">
                 <p class="error" *ngIf="repassInput.errors?.['required']">
                     Repeating password is required!
@@ -46,7 +45,6 @@
                     Passwords don't match!
                 </p>
             </ng-container>
-            <!-- TODO add event to show password -->
             <button class="submit" [disabled]="registerForm.invalid">Register</button>
         </form>
         <p>You already have an account? <a routerLink="/users/login">Login here.</a></p>
