--- a/frontend/src/app/core/footer/footer.component.html
+++ b/frontend/src/app/core/footer/footer.component.html
@@ -1,19 +1,19 @@
 <footer>
     <!-- TODO add images for better UX -->
     <div class="left">
-        <p>Contact us via <span class="contact">
-                <a href="mailto:fake_email@alabala.com" title="fake_email@alabala.com">Email</a></span></p>
-        <p><span class="contact"><a href="https://www.classtools.net/FB/home-page" target="_blank"
-                    title="Fake facebook page">Facebook
-                    Page</a></span></p>
+        <p>Contact us via 
+                <a href="mailto:fake_email@alabala.com" title="fake_email@alabala.com"><span class="contact">Email ✉</span></a></p>
+        <p><a href="https://www.classtools.net/FB/home-page" target="_blank"
+                    title="Fake facebook page"><span class="contact">Facebook
+                    Page</span></a></p>
     </div>
     <div class="right">
 
-        <p>Call us: <span class="contact"><a href="tel:+1-111-222-3"
-                    title="Fake number">+1-111-222-3</a></span>
-        <p><span class="contact"><a href="tel:+1-555-123-4"
-                    title="Another fake number">+1-555-123-4</a></span></p>
+        <p>Call us: <a href="tel:+1-111-222-3"
+                    title="Fake number"><span class="contact">+1-111-222-3</span></a></p>
+        <p><a href="tel:+1-555-123-4"
+                    title="Another fake number"><span class="contact">+1-555-123-4</span></a></p>
     </div>
     <p>©Copyright Project Defence 2022, All rights reserved</p>
-    <a href="https://github.com/Kif-gg/Angular-project-defence"><p><span class="contact">GITHUB REPO HERE</span></p></a>
+    <a href="https://github.com/Kif-gg/Angular-project-defence" title="Project - Angular" target="_blank"><p><span class="contact">GITHUB REPO HERE</span></p></a>
 </footer>
