--- a/frontend/src/app/core/main-content/main-content.component.html
+++ b/frontend/src/app/core/main-content/main-content.component.html
@@ -1,11 +1,8 @@
 <main>
 
-    <div class="main-page">
 
-        <h1>RBS Vehicle Express</h1>
-        <p>All-in-one place for your vehicles: <span>buy, sell and repair services!</span></p>
-        <a class="get-started" routerLink="/data/offers">GET STARTED!</a>
-
-    </div>
+    <h1>RBS Vehicle Express</h1>
+    <p>All-in-one place for your vehicles: <span>buy, sell and repair services!</span></p>
+    <a routerLink="/data/offers">GET STARTED!</a>
 
 </main>
