--- a/frontend/src/app/core/not-found/not-found.component.css
+++ b/frontend/src/app/core/not-found/not-found.component.css
@@ -36,21 +36,20 @@ p {
     color: white;
     border: none;
     text-decoration: none;
-    background-color: #4CAF50;
     text-align: center;
+    background-color: #128dab;
     box-sizing: border-box;
     width: 50%;
-    /* margin: auto; */
     margin-top: 120px;
     margin-bottom: 50px;
     margin-left: 25%;
     border-radius: 12px;
     box-shadow: 0 9px #999;
+    transition: 0.5s ease-in-out;
 }
 
 .button:hover {
-    transition-duration: 0.4s;
-    background-color: #005be4;
+    background-color: #4CAF50;
     color: white;
 }
 
