Added more styles, fixed admin access bug

--- a/frontend/src/app/core/about/about.component.html
+++ b/frontend/src/app/core/about/about.component.html
@@ -30,21 +30,23 @@
                     question</a></span>!</p>
         <h3>Our teams</h3>
 
-        <div class="team-image">
-            <img src="assets/static-images/team-working.jpg" alt="Team picture">
+        <div class="row">
+            <div class="team-image1">
+                <img src="assets/static-images/team-working.jpg" alt="Team picture">
+            </div>
+
+            <div class="team-image1">
+                <img src="assets/static-images/team-working-2.jpg" alt="Team picture 2">
+            </div>
         </div>
 
-        <div class="team-image">
-            <img src="assets/static-images/team-working-2.jpg" alt="Team picture 2">
-        </div>
-
-        <div class="team-image">
+        <div class="team-image3">
             <img src="assets/static-images/team-working-3.jpg" alt="Team picture 3">
         </div>
 
         <p>One of our teams even got the opportunity to participate in an official race event!</p>
 
-        <div class="team-image">
+        <div class="team-image4">
             <img src="assets/static-images/team-working-4.jpg" alt="Team picture 4">
         </div>
 
