--- a/frontend/src/app/core/footer/footer.component.html
+++ b/frontend/src/app/core/footer/footer.component.html
@@ -10,9 +10,9 @@
     <div class="right">
 
         <p>Call us: <a href="tel:+1-111-222-3"
-                    title="Fake number"><span class="contact">+1-111-222-3</span></a></p>
+                    title="Fake number"><span class="contact">+1-111-222-3 ✆</span></a></p>
         <p><a href="tel:+1-555-123-4"
-                    title="Another fake number"><span class="contact">+1-555-123-4</span></a></p>
+                    title="Another fake number"><span class="contact">+1-555-123-4 ✆</span></a></p>
     </div>
     <p>©Copyright Project Defence 2022, All rights reserved</p>
     <a href="https://github.com/Kif-gg/Angular-project-defence" title="Project - Angular" target="_blank"><p><span class="contact">GITHUB REPO HERE</span></p></a>
