Finished about styling

--- a/frontend/src/app/core/about/about.component.html
+++ b/frontend/src/app/core/about/about.component.html
@@ -2,7 +2,7 @@
 
     <div class="about-block">
 
-        <h1>Who are we?</h1>
+        <h1 class="beautified-header">Who are we?</h1>
         <p>We are a company that helps people to Repair, Buy and Sell vehicles all around the country!</p>
         <p>Our company started in a small garage, with two friends and their big ambitions trying to help their town
             by
@@ -19,23 +19,24 @@
             them as well.</p>
         <p>Our services are available in every province of the country!</p>
         <p>We provide the best workers to deal with the problems of your vehicles!</p>
-        <h3>Here is a map with all our services in different cities!</h3>
-
+        <hr>
+        <h3 class="beautified-header">Here is a map with all our services in different cities!</h3>
         <div class="map-image">
             <img src="assets/static-images/map.png" alt="Map with our services around the country">
         </div>
 
-        <p>You have questions? Check our <a routerLink="/FAQ">Frequently Asked Questions</a> page or <span
-                class="contact"><a href="mailto:fake_email@alabala.com" title="fake_email@alabala.com">Email us your
-                    question</a></span>!</p>
-        <h3>Our teams</h3>
+        <p class="questions">You have questions? Check our <a routerLink="/FAQ"><span class="contact">Frequently Asked Questions</span></a> page or <a href="mailto:fake_email@alabala.com" title="Fake email"><span
+            class="contact">Email us your
+                    question</span></a>!</p>
+        <hr>
+        <h3 class="beautified-header">Our teams</h3>
 
         <div class="row">
             <div class="team-image1">
                 <img src="assets/static-images/team-working.jpg" alt="Team picture">
             </div>
 
-            <div class="team-image1">
+            <div class="team-image2">
                 <img src="assets/static-images/team-working-2.jpg" alt="Team picture 2">
             </div>
         </div>
@@ -44,7 +45,7 @@
             <img src="assets/static-images/team-working-3.jpg" alt="Team picture 3">
         </div>
 
-        <p>One of our teams even got the opportunity to participate in an official race event!</p>
+        <p class="beautified-header">One of our teams even got the opportunity to participate in an official race event!</p>
 
         <div class="team-image4">
             <img src="assets/static-images/team-working-4.jpg" alt="Team picture 4">
