--- a/frontend/src/app/core/footer/footer.component.html
+++ b/frontend/src/app/core/footer/footer.component.html
@@ -15,5 +15,5 @@
                     title="Another fake number"><span class="contact">+1-555-123-4 ✆</span></a></p>
     </div>
     <p>©Copyright Project Defence 2022, All rights reserved</p>
-    <a href="https://github.com/Kif-gg/Angular-project-defence" title="Project - Angular" target="_blank"><p><span class="contact">GITHUB REPO HERE</span></p></a>
+    <p><a href="https://github.com/Kif-gg/Angular-project-defence" title="Project - Angular" target="_blank"><span class="contact">GITHUB REPO HERE</span></a></p>
 </footer>
