--- a/frontend/src/app/core/footer/footer.component.css
+++ b/frontend/src/app/core/footer/footer.component.css
@@ -5,6 +5,12 @@ footer {
     color: white;
     margin: auto;
     font-size: 20px;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 .contact {
