Added one paragraph to FAQ+style, edited About

--- a/frontend/src/app/core/about/about.component.html
+++ b/frontend/src/app/core/about/about.component.html
@@ -25,9 +25,7 @@
             <img src="assets/static-images/map.png" alt="Map with our services around the country">
         </div>
 
-        <p class="questions">You have questions? Check our <a routerLink="/FAQ"><span class="contact">Frequently Asked Questions</span></a> page or <a href="mailto:fake_email@alabala.com" title="Fake email"><span
-            class="contact">Email us your
-                    question</span></a>!</p>
+        <p class="questions">You have questions? Check our <a routerLink="/FAQ"><span class="contact">Frequently Asked Questions page</span></a>!</p>
         <hr>
         <h3 class="beautified-header">Our teams</h3>
 
