--- a/frontend/src/app/core/faq/faq.component.html
+++ b/frontend/src/app/core/faq/faq.component.html
@@ -87,6 +87,11 @@
             </p>
         </div>
 
+
+        <p class="more">You have more questions? <a href="mailto:fake_email@alabala.com" title="Fake email"><span
+                    class="contact">Email</span></a> us and we will try to give you as much comprehensive answer as we
+            can!</p>
+
     </section>
 
 </main>
