--- a/frontend/src/app/core/faq/faq.component.css
+++ b/frontend/src/app/core/faq/faq.component.css
@@ -30,12 +30,6 @@ h3 {
     transition: 0.5s;
     font-family: Arial, Helvetica, sans-serif;
     display: block;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -o-user-select: none;
-    user-select: none;
 }
 
 .question:hover {
@@ -78,6 +72,12 @@ h3 {
 
 .faq-block {
     margin-bottom: 10%;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 .contact {
@@ -85,14 +85,23 @@ h3 {
     color: rgb(244, 80, 80);
     font-weight: 900;
     transition: 0.5s ease-in-out;
+    -webkit-user-select: auto;
+    user-select: all;
 }
 
 .contact:hover {
     background-color: #128dab;
-    color: black;
+    color: white;
 }
 
 strong {
     text-decoration: underline;
     color: rgb(91, 249, 107);
+}
+
+.more {
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 24px;
+    margin-top: 8%;
 }
